--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </ul>
         </div>
     </div>
-    <!--[if IE 6]>
+    <!--[if IE 6] htmlpreview.github.io/?>
         <script src="js/DD_belatedPNG_0.0.8a.js" type="text/javascript"></script>
         <script type="text/javascript">
             DD_belatedPNG.fix('*');
